# KoreanCode

./: .gitattributes  CMakeLists.txt  GRAMMAR.md  INSTALL_AND_DLL_GUIDE.md  Makefile  README.md  kc_autograd.c  kc_autograd.h  kc_bytecode.c  kc_ci_test.c  kc_contract_check.c  kc_contract_check.h  kc_label_test.c  kc_mcp.h  kc_nckr_design.md  kc_ont_import.h  kc_ont_sdk.py  kc_tensor.c  kc_tensor.h  kc_vm.c  kc_vm.h  kc_wasm_api.c  kcodegen_llvm.c  kcodegen_llvm.h  kcodegen_llvm_expr.c  kcodegen_main.c  kgc.h  kinterp.c  kinterp_main.c  kserver.c
.github/workflows/: build.yml
DEE/: README.md  gitignore  kc_active_ai.c  kc_active_ai.h  kc_hormone.c  kc_hormone.h  kc_persona.c  kc_persona.h  kc_vision.c  kc_vision.h
DEE/paper/: DEE_Specification_v2.0.docx
Hormone/: kcode_hormone_design.md
NCkR/: kc_nckr_design.md
Wiki/: API-도구.md  Home.md  기여-가이드.md  버전-히스토리.md  빌드-설치.md  시작하기.md  언어-레퍼런스.md  온톨로지-시스템.md  컴파일러-구조.md
docs/: ide.css  ide.html  ide.js  index.html  kide_wasm.html
docs/wasm/: kcode-wasm.js  kcode_vm.js
release/: kbc  kcode_gen  kcode_llvm  kinterp  readme.md
releases/linux-x64/: README.md  kbc  kcode_gen  kinterp
src/: Readme.md  kbc_main.c  kc_accel.h  kc_bytecode.h  kc_mcp.c  kc_ont_query.h  kc_wasm_api.h  kcodegen.c  kcodegen.h  kcodegen_core.c  kcodegen_expr.c  kcodegen_func.c  kcodegen_llvm_builtin.c  kcodegen_llvm_main.c  kcodegen_llvm_stmt.c  kcodegen_llvm_util.c  kcodegen_stmt.c  kgc.c  kinterp.c  kinterp.h  klexer.c  klexer.h  klexer_main.c  kparser.c  kparser.h  kparser_main.c  ktest_lexer.c
src/Kcode/: kc_contract.han  kc_contract.hg  kc_llvm.hg  kc_llvm_const.han  kc_llvm_ctx.han  kc_llvm_func.han  kc_llvm_gen.han  kc_llvm_inst.han  kc_llvm_out.han  kc_llvm_rt.han  kc_llvm_type.han  kc_mc.han  kc_mc.hg  kinterp.han  kinterp.hg  klexer.han  klexer.hg  kllvm.han  kparser.han  kparser.hg  master.mc
web/: readme.md
web/wasm/: kc_ont_sdk.js  kcode_vm.wasm
